--- a/invessence/modules/web/src/main/webapp/css/webstyle.css
+++ b/invessence/modules/web/src/main/webapp/css/webstyle.css
@@ -212,3 +212,9 @@ img {
 .ui-datatable .dtRAlign {
     text-align: right !important;
 }
+
+.footerLink {
+    color: #ffffff !important;
+    text-decoration: underline;
+    font-weight: bold;
+}
