--- a/invessence/modules/web/src/main/webapp/resources/primefaces-advisor/theme.css
+++ b/invessence/modules/web/src/main/webapp/resources/primefaces-advisor/theme.css
@@ -78,7 +78,7 @@
 .ui-widget-content .ui-state-focus,
 .ui-widget-header .ui-state-focus {
 	border: 1px solid #999999;
-	background: #1f5062 url("#{resource['primefaces-advisor:images/ui-bg_flat_65_1f5062_40x100.png']}") 50% 50% repeat-x;
+	background: #aaaaaa url("#{resource['primefaces-advisor:images/ui-bg_flat_0_aaaaaa_40x100.png']}") 50% 50% repeat-x;
 	font-weight: normal;
 	color: #212121;
 }
@@ -90,7 +90,7 @@
 .ui-state-focus a:hover,
 .ui-state-focus a:link,
 .ui-state-focus a:visited {
-	color: #212121;
+	color: #f6f5f5;
 	text-decoration: none;
 }
 .ui-state-active,
