--- a/invessence/modules/web/src/main/webapp/template/common/commonHeader.xhtml
+++ b/invessence/modules/web/src/main/webapp/template/common/commonHeader.xhtml
@@ -1,17 +1,69 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:p="http://primefaces.org/ui"
-	xmlns:pe="http://primefaces.org/ui/extensions">
-    <body>
-	    <ui:composition>
-			<ui:include src="header.xhtml" />
-	    </ui:composition>
-    </body>
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+        >
+
+
+<body>
+<ui:composition>
+    <header id="main-header">
+        <div class="container clearfix">
+            <a href="${apache.url}/">
+                <img src="/images/InvessenceLogo.jpg" alt="Invessence Inc." id="logo"/>
+            </a>
+
+                <div id="et-top-navigation">
+                    <nav id="top-menu">
+                        <ul id="top-menu" class="nav">
+                            <li id="menu-item-2994" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2994">
+                                <a href="${apache.url}/why-invessence/">Why Us</a></li>
+                            <li id="menu-item-3934" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3934">
+                                <a href="${apache.url}/howitworks/">How it Works</a></li>
+                            <li id="menu-item-3313" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3313">
+                                <a href="${apache.url}/pricing/">Pricing</a></li>
+                            <li id="menu-item-3957" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3957">
+                                <a href="${apache.url}/about-us/">About Us</a></li>
+                            <li id="menu-item-3883" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3883">
+                                <a href="${apache.url}/blog/">Blog</a></li>
+                            <li id="menu-item-2338" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2338">
+                                <a href="${apache.url}/faq/">FAQ</a></li>
+                        </ul>
+                    </nav>
+                    <div id="et_top_search">
+                        <a href="${ssl.url}/login.xhtml"><img id="my_image" src="/images/login.png"/> </a>
+                    </div>
+
+                    <div id="et_mobile_nav_menu">
+                        <a href="#" class="mobile_nav closed">
+                            <span class="mobile_menu_bar"></span>
+                            <ul id="mobile_menu" class="et_mobile_menu">
+                                <li id="menu-item-2994" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2994">
+                                    <a href="${apache.url}/why-invessence/">Why Us</a></li>
+                                <li id="menu-item-3934" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-3918 current_page_item menu-item-3934">
+                                    <a href="${apache.url}/howitworks//">How it Works</a></li>
+                                <li id="menu-item-3313" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3313">
+                                    <a href="${apache.url}/pricing/">Pricing</a></li>
+                                <li id="menu-item-3957" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3957">
+                                    <a href="${apache.url}/about-us/">About Us</a></li>
+                                <li id="menu-item-3883" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3883">
+                                    <a href="${apache.url}/blog/">Blog</a></li>
+                                <li id="menu-item-2338" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2338">
+                                    <a href="${apache.url}/faq/">FAQ</a></li>
+                            </ul>
+                        </a>
+                    </div>
+                    <!-- #et_mobile_nav_menu -->
+
+                </div>
+                <!-- #et-top-navigation -->
+        </div>
+        <!-- .container -->
+    </header>
+
+</ui:composition>
+</body>
 </html>
 
 
