Introduced Slider in Advisor and Consumer model

--- a/invessence/modules/web/src/main/webapp/css/webstyle.css
+++ b/invessence/modules/web/src/main/webapp/css/webstyle.css
@@ -379,6 +379,7 @@ img {
         width: 35%;
         float: left;
         margin: 0px;
+        padding-right: 5px;
     }
 
     .divDetailArea {
