--- a/invessence/modules/web2/src/main/webapp/css/webstyle.css
+++ b/invessence/modules/web2/src/main/webapp/css/webstyle.css
@@ -26,61 +26,13 @@ img {
 }
 
 /*---------------------------- General StyleSheet ---------------------------------------*/
-@media screen and ( min-width: 600px ) {
 
-    .divAdvEntry {
-        width:100%;
-        padding: 5px 5px 5px 5px;
-        height: 110px;
-        background: #90c1d2 url("#{resource['primefaces-advisor:images/ui-bg_highlight-hard_30_90c1d2_1x100.png']}") 10% 500% repeat-x;
-    }
-
-    .divAdvRow {
-        float:left;
-        width: 100%;
-    }
-
-    .divAdvImage {
-        float:left;
-        border:none;
-        margin:5px;
-        width: 7%;
-    }
-
-    .divAdvSecond {
-        float:left;
-        border:none;
-        margin:5px;
-        width: 40%;
-    }
-
-    .divAdvThird {
-        float:left;
-        border:none;
-        margin:5px;
-        width: 15%;
-    }
-
-    .divAdvFourth {
-        float:left;
-        border:none;
-        margin:5px;
-        width: 15%;
-    }
-
-    .divAdvFifth {
-        float:left;
-        border:none;
-        margin:5px;
-        width: 15%;
-    }
-
-    .divSixth {
-        float:left;
-        border:none;
-        margin:5px;
-    }
+.ui-growl {
+    position:fixed;
+    top: 40%;
+    left: 37%;
 }
+
 .invNBgrid {
     border-collapse: collapse;
     border-spacing: 1px !important;
@@ -133,6 +85,11 @@ img {
 }
 
 .invInput {
+}
+
+.invInputLogon {
+    font-size: 18px !important;
+    font-family: 'Open Sans', Helvetica, Arial, Lucida, sans-serif !important;
 }
 
 .invTitleSection {
@@ -235,12 +192,12 @@ img {
 }
 
 .invAllocTable th {
-    font-size: 1.2em !important;
+    font-size: 1em !important;
     font-weigh: bold !important;
 }
 
 .invAllocTable tfoot {
-    font-size: 1.4em !important;
+    font-size: 1em !important;
     font-weigh: bold !important;
 }
 
@@ -295,6 +252,12 @@ img {
     text-align: right !important;
 }
 
+.ui-datatable .inv_filters {
+   width: 100% !important;
+   margin: 0px !important;
+   background: #fff !important;
+}
+
 .footerLink {
     color: #ffffff !important;
     text-decoration: underline;
@@ -330,20 +293,155 @@ img {
     box-sizing: border-box;
 }
 
+/*---------------------------- Media based StyleSheet ---------------------------------------*/
+
 @media screen and ( min-width: 600px ) {
 
-    .riskArea {
+    .divAdvEntry {
+        width:100%;
+        padding: 5px 5px 5px 5px;
+        height: 110px;
+        background: #90c1d2 url("#{resource['primefaces-advisor:images/ui-bg_highlight-hard_30_90c1d2_1x100.png']}") 10% 500% repeat-x;
+    }
+
+    .divAdvRow {
+        float:left;
         width: 100%;
     }
 
-    .riskQ {
-        float: left;
-        padding: 5px 5px 5px 5px;
-        width: 60%;
+    .divAdvImage {
+        float:left;
+        border:none;
+        margin:5px;
+        width: 7%;
     }
 
-    .riskGraph {
-        width: 25%;
+    .divAdvSecond {
+        float:left;
+        border:none;
+        margin:5px;
+        width: 45%;
+        vertical-align: top;
+        text-align: left;
+    }
+
+    .divAdvThird {
+        float:left;
+        border:none;
+        margin:5px;
+        width: 15%;
+        text-align: center;
+    }
+
+    .divAdvFourth {
+        float:left;
+        border:none;
+        margin:5px;
+        width: 12%;
+        text-align: center;
+    }
+
+    .divAdvFifth {
+        float:left;
+        border:none;
+        margin:5px;
+        width: 10%;
+        text-align: center;
+    }
+
+    .divAdvSixth {
+        float:left;
+        border:none;
+        margin:5px;
+    }
+
+    .divSubLine1 {
         float: left;
+        width: 90%;
+        margin: 2px;
+    }
+
+    .divSubLine2 {
+        float: left;
+        width: 100%;
+        margin: 2px;
+    }
+
+    .divDataArea {
+        width: 100%;
+        height: 450px;
+        float: left;
+        margin: 0px;
+
+    }
+
+    .divGraphArea {
+        width: 35%;
+        float: left;
+        margin: 0px;
+        padding-right: 5px;
+    }
+
+    .divDetailArea {
+        width: 60%;
+        float: left;
+    }
+
+}
+
+
+@media screen and ( min-width: 150px ) {
+
+    .divAdvEntry {
+        width:100%;
+        padding: 5px 5px 5px 5px;
+        height: 110px;
+        background: #90c1d2 url("#{resource['primefaces-advisor:images/ui-bg_highlight-hard_30_90c1d2_1x100.png']}") 10% 500% repeat-x;
+    }
+
+    .divAdvRow {
+        float:left;
+        width: 100%;
+    }
+
+    .divAdvImage {
+        float:left;
+        border:none;
+        margin:5px;
+        width: 7%;
+    }
+
+    .divAdvSecond {
+        float:left;
+        border:none;
+        margin:5px;
+        width: 40%;
+    }
+
+    .divAdvThird {
+        float:left;
+        border:none;
+        margin:5px;
+        width: 15%;
+    }
+
+    .divAdvFourth {
+        float:left;
+        border:none;
+        margin:5px;
+        width: 15%;
+    }
+
+    .divAdvFifth {
+        float:left;
+        border:none;
+        margin:5px;
+        width: 15%;
+    }
+
+    .divAdvSixth {
+        float:left;
+        border:none;
+        margin:5px;
     }
 }
