--- a/invessence/modules/web/src/main/webapp/template/common/header.xhtml
+++ b/invessence/modules/web/src/main/webapp/template/common/header.xhtml
@@ -136,6 +136,8 @@
                                         <p:separator />
                                         <p:menuitem value="Reports" disabled="true"
                                                     actionListener="#{menu.doMenuAction('/common/reports.xhtml')}"/>
+                                       <p:menuitem value="Client" disabled="true"
+                                                   actionListener="#{menu.doMenuAction('/consumer/personalprofile1.xhtml')}"/>
                                     </p:submenu>
                                     <p:menuitem value="Settings" icon="ui-icon-gear"
                                                 rendered="#{menu.enableMenu('ADMIN')}"
