--- a/invessence/modules/web/src/main/webapp/template/common/invlayout.xhtml
+++ b/invessence/modules/web/src/main/webapp/template/common/invlayout.xhtml
@@ -14,6 +14,7 @@
         </f:facet>
         <title>Invessence</title>
         <h:outputScript name="js/layout.js" library="spark-layout" />
+        <link rel='stylesheet' id='web-css' href='/css/webstyle.css' type='text/css' media='all'/>
 
         <ui:insert name="head" />
     </h:head>
@@ -31,7 +32,7 @@
             </ui:insert>
 
             <div class="layout-portlets-box TexAlCenter">
-                <span class="Fs14 gray FontRalewayRegular">PrimeFaces Spark  |   All rights reserved.</span>
+                <span class="Fs14 gray FontRalewayRegular">Invessence  |   All rights reserved.</span>
             </div>
         </div>
 
@@ -49,6 +50,7 @@
         <h:outputStylesheet name="css/font-awesome.css" library="spark-layout" />
         <h:outputStylesheet name="css/animate.css" library="spark-layout" />
         <h:outputStylesheet name="css/spark-layout.css" library="spark-layout" />
+        <h:outputStylesheet name="css/invessence.css" library="spark-layout" />
     </h:body>
 
 </html>
