--- a/invessence/modules/web/src/main/webapp/template/common/invlayoutmenu.xhtml
+++ b/invessence/modules/web/src/main/webapp/template/common/invlayoutmenu.xhtml
@@ -9,7 +9,7 @@
     <h:form id="menutopbar">
     <ps:menu>
         <f:facet name="options">
-            <p:commandButton value="Dashboard" styleClass="Fs16 BlueButton"
+            <p:commandButton value="Dashboard" icon="fa fa-home" styleClass="Fs18 BlueButton"
                              actionListener="#{menu.redirectStartPage}"/>
         </f:facet>
 
