--- a/invessence/modules/web/src/main/webapp/template/common/invlayout.xhtml
+++ b/invessence/modules/web/src/main/webapp/template/common/invlayout.xhtml
@@ -14,10 +14,14 @@
         </f:facet>
         <title>Invessence</title>
         <h:outputScript name="js/layout.js" library="spark-layout" />
-        <link rel='stylesheet' id='web-css' href='/css/webstyle.css' type='text/css' media='all'/>
 
         <ui:insert name="head" />
     </h:head>
+
+    <f:metadata>
+        <f:viewParam name="cid" value="#{menu.cid}"/>
+        <f:event type="preRenderView" listener="#{menu.preRenderView}"/>
+    </f:metadata>
 
     <h:body>    
         <div id="menu-mask"></div>
@@ -38,7 +42,7 @@
 
         <p:ajaxStatus style="width:128px;height:128px;position:fixed;right:5px;bottom:5px">
             <f:facet name="start">
-                <p:graphicImage name="demo/images/preloader.gif" />
+                <p:graphicImage name="/images/preloader.gif" library="spark_layout"/>
             </f:facet>
 
             <f:facet name="complete">
