--- a/invessence/modules/web/src/main/webapp/template/common/layout.xhtml
+++ b/invessence/modules/web/src/main/webapp/template/common/layout.xhtml
@@ -1,47 +1,58 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui"
-      xmlns:pe="http://primefaces.org/ui/extensions">
+      xmlns:p="http://primefaces.org/ui">
 
 <h:head>
-    <meta name='robots' content='noindex,nofollow'/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
-    <title>Invessence Inc.</title>
-    <link rel='stylesheet' id='wordpress-css' href='/css/generic.css' type='text/css' media='all'/>
-    <link rel='stylesheet' id='prime-css' href='/css/global.css' type='text/css' media='all'/>
-    <link rel='stylesheet' id='web-css' href='/css/webstyle.css' type='text/css' media='all'/>
+    <f:facet name="first">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
+        <meta name="apple-mobile-web-app-capable" content="yes" />
+    </f:facet>
+    <title>Invessence</title>
+    <h:outputScript name="js/layout.js" library="spark-layout" />
+
+    <ui:insert name="head" />
 </h:head>
 
 <f:metadata>
     <f:viewParam name="cid" value="#{menu.cid}"/>
-    <f:viewParam name="mdef" value="#{menu.default_page}"/>
+    <f:event type="preRenderView" listener="#{menu.preRenderView}"/>
 </f:metadata>
-<h:body class="home page page-id-1958 page-template-default et_fixed_nav et_secondary_nav_enabled et_secondary_nav_two_panels windows et_pb_pagebuilder_layout et_right_sidebar chrome et_includes_sidebar wpb-js-composer js-comp-ver-4.0.4 vc_responsive">
 
-    <div id="page-container" style="padding-top: 95px;">
+<h:body>
+    <div id="menu-mask"></div>
 
-        <ui:insert name="header">
-            <ui:include src="/template/common/header.xhtml"/>
-        </ui:insert>
+    <ui:include src="/template/common/header.xhtml" />
 
+    <div id="layout-portlets-cover">
         <ui:insert name="content">
-            <ui:include src="/template/common/content.xhtml"/>
+            Template
         </ui:insert>
 
-        <ui:fragment rendered="#{menu.isUserLoggedInMenu}">
-            <ui:insert name="disclaimer">
-                <ui:include src="/template/common/disclaimer.xhtml"/>
-            </ui:insert>
-        </ui:fragment>
-
-        <ui:insert name="globalDialogs">
-            <ui:include src="/template/common/sharedDialog.xhtml"/>
-        </ui:insert>
+        <div class="layout-portlets-box TexAlCenter">
+            <span class="Fs14 gray FontRalewayRegular">Invessence  |   All rights reserved.</span>
+        </div>
     </div>
+
+    <p:ajaxStatus style="width:128px;height:128px;position:fixed;right:5px;bottom:5px">
+        <f:facet name="start">
+            <p:graphicImage name="/images/preloader.gif" library="spark_layout"/>
+        </f:facet>
+
+        <f:facet name="complete">
+            <h:outputText value="" />
+        </f:facet>
+    </p:ajaxStatus>
+
+    <h:outputStylesheet name="css/core-layout.css" library="spark-layout" />
+    <h:outputStylesheet name="css/font-awesome.css" library="spark-layout" />
+    <h:outputStylesheet name="css/animate.css" library="spark-layout" />
+    <h:outputStylesheet name="css/spark-layout.css" library="spark-layout" />
+    <h:outputStylesheet name="css/invessence.css" library="spark-layout" />
 </h:body>
+
 </html>
