--- a/invessence/modules/web/src/main/webapp/template/common/template.xhtml
+++ b/invessence/modules/web/src/main/webapp/template/common/template.xhtml
@@ -31,13 +31,13 @@
             </ui:insert>
 
             <div class="layout-portlets-box TexAlCenter">
-                <span class="Fs14 gray FontRalewayRegular">PrimeFaces Spark  |   All rights reserved.</span>
+                <span class="Fs14 gray FontRalewayRegular">Invessence  |   All rights reserved.</span>
             </div>
         </div>
 
         <p:ajaxStatus style="width:128px;height:128px;position:fixed;right:5px;bottom:5px">
             <f:facet name="start">
-                <p:graphicImage name="demo/images/preloader.gif" />
+                <p:graphicImage name="images/preloader.gif" />
             </f:facet>
 
             <f:facet name="complete">
