--- a/invessence/modules/web/src/main/webapp/template/html/HTMLTemplate-SignUp.html
+++ b/invessence/modules/web/src/main/webapp/template/html/HTMLTemplate-SignUp.html
@@ -76,7 +76,7 @@
                             <li>Click &quot;Submit&quot;.</li>
                         </ol>
 
-                        <p><a href="'2'/setPassword.xhtml?u='3'&amp;r='4'" target="_blank">Let&#39;s start.</a>.</p>
+                        <p><a href="'2'/register.xhtml?u='3'&amp;r='4'" target="_blank">Let&#39;s start.</a>.</p>
                     </td>
                     <td colspan="6" style="background-color: #fff">
                         <table align="center" bgcolor="#009abb" border="0" cellpadding="6" cellspacing="1" width="200">
