--- a/invessence/modules/web/src/main/webapp/template/common/invlayout.xhtml
+++ b/invessence/modules/web/src/main/webapp/template/common/invlayout.xhtml
@@ -42,7 +42,7 @@
 
         <p:ajaxStatus style="width:128px;height:128px;position:fixed;right:5px;bottom:5px">
             <f:facet name="start">
-                <p:graphicImage name="/images/preloader.gif" library="spark_layout"/>
+                <p:graphicImage name="images/preloader.gif" library="spark_layout"/>
             </f:facet>
 
             <f:facet name="complete">
