--- a/invessence/modules/web/src/main/webapp/template/common/invtopbar.xhtml
+++ b/invessence/modules/web/src/main/webapp/template/common/invtopbar.xhtml
@@ -9,7 +9,8 @@
     <div id="layout-topbar" class="ShadowGray">
         <div id="layout-topbar-indent">
             <a href="#{menu.defaultHome}">
-                <h:graphicImage name="#{menu.logo}" alt="#{menu.logoAlt}" styleClass="Fleft" library="spark-layout" id="logo" class="Fleft"/>
+                <h:graphicImage name="#{menu.logo}" alt="#{menu.logoAlt}"
+                                styleClass="Fleft" library="spark-layout" id="logo" class="Fleft"/>
             </a>
             <a href="#" id="mobile-menu-button" class="BordRad3 white ShowOnMobile"><i class="fa fa-bars"></i> Menu</a>
             <a href="#" id="mobile-menu-button-gray" class="BordRad3 white ShowOnMobile"><i class="fa fa-caret-down"></i> Top Menu</a>
