--- a/invessence/modules/web/src/main/webapp/resources/spark-layout/css/invessence.css
+++ b/invessence/modules/web/src/main/webapp/resources/spark-layout/css/invessence.css
@@ -10,6 +10,11 @@
     left: 37% !important;
 }
 
+.ui-panel .ui-panel-footer {
+  border-top: 0px !important;
+  background-color: transparent !important
+}
+
 .NBwidget {
     border: 0px;
 }
