Prep for LTAM client (Testing using steps), also fixed bug related to taxable

--- a/invessence/modules/web/src/main/webapp/spark/resources/spark-layout/css/invessence.css
+++ b/invessence/modules/web/src/main/webapp/spark/resources/spark-layout/css/invessence.css
@@ -283,4 +283,24 @@
     box-sizing: border-box;
 }
 
+.simpleInputText {
+     background-color: transparent;
+     border: 0px none;
+     border-bottom: solid 1px #465b65;
+     font-size: 24px;
+     width: 140px;
+     text-align: center;
+ }
+
+.ul-vertical-align {
+     list-style-type: none;
+     margin: 0;
+     padding: 0;
+ }
+
+.ul-vertical-align li {
+    display: inline;
+    float: left;
+}
+
 /*---------------------------- Media based StyleSheet ---------------------------------------*/
