--- a/invessence/modules/web/src/main/webapp/template/common/invtopbar.xhtml
+++ b/invessence/modules/web/src/main/webapp/template/common/invtopbar.xhtml
@@ -24,19 +24,15 @@
                     <ui:fragment rendered="#{menu.hasAccessMenu('ADVISOR')}">
                        <a class="Animated05 CursPointer"><i class="fa fa-user"></i> #{menu.welcome} <i class="fa fa-chevron-down Fs14 Fright ShowOnMobile"></i></a>
                        <ul style="width:175px; margin-left:-10px;" class="Animated03 submenu">
-                           <li><a class="Animated05"><i class="fa fa-user Fs30 Fleft"></i> <span class="Fright Fs20 TexAlRight">#{menu.username}<span class="Fs10 DispBlock">Last login 18:50</span></span></a></li>
+                           <li><a class="Animated05"><i class="fa fa-user Fs30 Fleft"></i> <span class="Fright Fs20 TexAlRight">#{menu.username}</span></a></li>
                            <li><a href="/pages/common/myprofile.xhtml" class="Animated05"><i class="fa fa-dashboard"></i> My Profile</a></li>
-                           <li><a href="#" class="Animated05"><i class="fa fa-gear fa-spin"></i> Settings</a></li>
-                           <li><a href="#" class="Animated05"><i class="fa fa-suitcase"></i> Tasks <span class="notification-bubble BordRad3 Fright">24</span></a></li>
-                           <li><a href="#" class="Animated05"><i class="fa fa-quote-right"></i> Notifications <span class="notification-bubble BordRad3 Fright">18</span></a></li>
                        </ul>
                     </ui:fragment>
                     <ui:fragment rendered="#{! menu.hasAccessMenu('ADVISOR')}">
                         <a class="Animated05 CursPointer"><i class="fa fa-user"></i> #{menu.welcome} <i class="fa fa-chevron-down Fs14 Fright ShowOnMobile"></i></a>
                         <ul style="width:175px; margin-left:-10px;" class="Animated03 submenu">
-                            <li><a class="Animated05"><i class="fa fa-user Fs30 Fleft"></i> <span class="Fright Fs20 TexAlRight">#{menu.username}<span class="Fs10 DispBlock">Last login 18:50</span></span></a></li>
+                            <li><a class="Animated05"><i class="fa fa-user Fs30 Fleft"></i> <span class="Fright Fs20 TexAlRight">#{menu.username}</span></a></li>
                             <li><a href="/pages/common/myprofile.xhtml" class="Animated05"><i class="fa fa-dashboard"></i> My Profile</a></li>
-                            <li><a href="#" class="Animated05"><i class="fa fa-quote-right"></i> Notifications <span class="notification-bubble BordRad3 Fright">18</span></a></li>
                         </ul>
                     </ui:fragment>
                 </li>
