LTAM + Revised Rebalanced

--- a/invessence/modules/web/src/main/webapp/template/common/backup/invlayoutplain.xhtml
+++ b/invessence/modules/web/src/main/webapp/template/common/backup/invlayoutplain.xhtml
@@ -26,9 +26,9 @@
 <h:body>
     <div id="menu-mask"></div>
 
-    <ui:include src="/template/common/invtopbarplain.xhtml"/>
+    <ui:include src="/template/common/backup/invtopbarplain.xhtml/common/invtopbarplain.xhtml"/>
 
-    <ui:include src="/template/common/invmenuplain.xhtml"/>
+    <ui:include src="/template/common/backup/invmenuplain.xhtml/common/backup/invmenuplain.xhtml"/>
 
     <div id="layout-portlets-cover">
     <ui:insert name="content">
