--- a/invessence/modules/web/src/main/webapp/template/common/backup/layout.xhtml
+++ b/invessence/modules/web/src/main/webapp/template/common/backup/layout.xhtml
@@ -26,7 +26,7 @@
 <h:body>
     <div id="menu-mask"></div>
 
-    <ui:include src="/template/common/header.xhtml" />
+    <ui:include src="/template/common/backup/header.xhtml/common/header.xhtml" />
 
     <div id="layout-portlets-cover">
         <ui:insert name="content">
