--- a/invessence/modules/web/src/main/webapp/template/common/backup/responsivelayout.xhtml
+++ b/invessence/modules/web/src/main/webapp/template/common/backup/responsivelayout.xhtml
@@ -247,7 +247,7 @@
         </ui:insert>
 
         <ui:insert name="content">
-            <ui:include src="/template/common/content.xhtml"/>
+            <ui:include src="/template/common/backup/content.xhtml/common/content.xhtml"/>
         </ui:insert>
 
         <ui:fragment rendered="#{menu.isUserLoggedInMenu}">
