--- a/invessence/modules/web/src/main/webapp/template/common/backup/template.xhtml
+++ b/invessence/modules/web/src/main/webapp/template/common/backup/template.xhtml
@@ -21,9 +21,9 @@
     <h:body>    
         <div id="menu-mask"></div>
 
-        <ui:include src="/template/common/topbar.xhtml" />
+        <ui:include src="/template/common/backup/topbar.xhtml/common/backup/topbar.xhtml" />
 
-        <ui:include src="/template/common/layoutmenu.xhtml" />
+        <ui:include src="/template/common/backup/layoutmenu.xhtml/common/layoutmenu.xhtml" />
 
         <div id="layout-portlets-cover">
             <ui:insert name="content">
