--- a/invessence/modules/web/src/main/webapp/template/common/invtopbar.xhtml
+++ b/invessence/modules/web/src/main/webapp/template/common/invtopbar.xhtml
@@ -12,31 +12,35 @@
                 <h:graphicImage name="#{menu.logo}" alt="#{menu.logoAlt}"
                                 styleClass="Fleft" library="spark-layout" id="logo" class="Fleft"/>
             </a>
-            <a href="#" id="mobile-menu-button" class="BordRad3 white ShowOnMobile"><i class="fa fa-bars"></i> Menu</a>
-            <a href="#" id="mobile-menu-button-gray" class="BordRad3 white ShowOnMobile"><i class="fa fa-caret-down"></i> Top Menu</a>
 
-            <ul id="layout-topbar-menu">
-                <li>
-                    <a href="j_spring_security_logout" class="Animated05"><i class="fa fa-sign-out"></i> Logout</a>
-                </li>
-                <li class="fa fa-ellipsis-v menu-separator"></li>
-                <li>
-                    <ui:fragment rendered="#{menu.hasAccessMenu('ADVISOR')}">
-                       <a class="Animated05 CursPointer"><i class="fa fa-user"></i> #{menu.welcome} <i class="fa fa-chevron-down Fs14 Fright ShowOnMobile"></i></a>
-                       <ul style="width:175px; margin-left:-10px;" class="Animated03 submenu">
-                           <li><a class="Animated05"><i class="fa fa-user Fs30 Fleft"></i> <span class="Fright Fs20 TexAlRight">#{menu.username}</span></a></li>
-                           <li><a href="/pages/common/myprofile.xhtml" class="Animated05"><i class="fa fa-dashboard"></i> My Profile</a></li>
-                       </ul>
-                    </ui:fragment>
-                    <ui:fragment rendered="#{! menu.hasAccessMenu('ADVISOR')}">
-                        <a class="Animated05 CursPointer"><i class="fa fa-user"></i> #{menu.welcome} <i class="fa fa-chevron-down Fs14 Fright ShowOnMobile"></i></a>
-                        <ul style="width:175px; margin-left:-10px;" class="Animated03 submenu">
-                            <li><a class="Animated05"><i class="fa fa-user Fs30 Fleft"></i> <span class="Fright Fs20 TexAlRight">#{menu.username}</span></a></li>
-                            <li><a href="/pages/common/myprofile.xhtml" class="Animated05"><i class="fa fa-dashboard"></i> My Profile</a></li>
-                        </ul>
-                    </ui:fragment>
-                </li>
-            </ul>
+            <ui:fragment rendered="#{menu.isUserLoggedInMenu}">
+                <a href="#" id="mobile-menu-button" class="BordRad3 white ShowOnMobile"><i class="fa fa-bars"></i> Menu</a>
+                <a href="#" id="mobile-menu-button-gray" class="BordRad3 white ShowOnMobile"><i class="fa fa-caret-down"></i> Top Menu</a>
+
+                <ul id="layout-topbar-menu">
+                    <li>
+                        <a href="j_spring_security_logout" class="Animated05"><i class="fa fa-sign-out"></i> Logout</a>
+                    </li>
+                    <li class="fa fa-ellipsis-v menu-separator"></li>
+                    <li>
+                        <ui:fragment rendered="#{menu.hasAccessMenu('ADVISOR')}">
+                            <a class="Animated05 CursPointer"><i class="fa fa-user"></i> #{menu.welcome} <i class="fa fa-chevron-down Fs14 Fright ShowOnMobile"></i></a>
+                            <ul style="width:175px; margin-left:-10px;" class="Animated03 submenu">
+                                <li><a class="Animated05"><i class="fa fa-user Fs30 Fleft"></i> <span class="Fright Fs20 TexAlRight">#{menu.username}</span></a></li>
+                                <li><a href="/pages/common/myprofile.xhtml" class="Animated05"><i class="fa fa-dashboard"></i> My Profile</a></li>
+                            </ul>
+                        </ui:fragment>
+                        <ui:fragment rendered="#{! menu.hasAccessMenu('ADVISOR')}">
+                            <a class="Animated05 CursPointer"><i class="fa fa-user"></i> #{menu.welcome} <i class="fa fa-chevron-down Fs14 Fright ShowOnMobile"></i></a>
+                            <ul style="width:175px; margin-left:-10px;" class="Animated03 submenu">
+                                <li><a class="Animated05"><i class="fa fa-user Fs30 Fleft"></i> <span class="Fright Fs20 TexAlRight">#{menu.username}</span></a></li>
+                                <li><a href="/pages/common/myprofile.xhtml" class="Animated05"><i class="fa fa-dashboard"></i> My Profile</a></li>
+                            </ul>
+                        </ui:fragment>
+                    </li>
+                </ul>
+            </ui:fragment>
+
         </div>
     </div>
 
