--- a/invessence/modules/web/src/main/webapp/resources/spark-layout/css/core-layout.css
+++ b/invessence/modules/web/src/main/webapp/resources/spark-layout/css/core-layout.css
@@ -135,6 +135,7 @@ h1, h2, h3, h4, h5, h6{ margin:0px !important;}
 .Wid25{ width:25%;}
 .Wid20{ width:20%;}
 .Wid10{ width:10%;}
+.Wid5{ width:5%;}
 
 .MaxWid500{max-width:500px;}
 
@@ -232,7 +233,9 @@ h1, h2, h3, h4, h5, h6{ margin:0px !important;}
 .BoxSizeBorder{ box-sizing:border-box; -webkit-box-sizing:border-box; -moz-box-sizing:border-box;}
 
 /* Font Sizes */
-.Fs9{font-size:9px !important;} 
+.Fs7{font-size:7px !important;}
+.Fs8{font-size:8px !important;}
+.Fs9{font-size:9px !important;}
 .Fs10{font-size:10px !important;} 
 .Fs11{font-size:11px !important;} 
 .Fs12{font-size:12px !important;} 
