--- a/invessence/modules/web/src/main/webapp/template/common/ltamlayout.xhtml
+++ b/invessence/modules/web/src/main/webapp/template/common/ltamlayout.xhtml
@@ -12,7 +12,7 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
             <meta name="apple-mobile-web-app-capable" content="yes" />
         </f:facet>
-        <title>LTAM</title>
+        <title>iAdvice</title>
         <h:outputScript name="js/layout.js" library="spark-layout" />
 
         <ui:insert name="head" />
@@ -24,13 +24,7 @@
     </f:metadata>
 
     <h:body>    
-        <div id="menu-mask"></div>
-
-        <ui:include src="/template/common/invtopbar.xhtml" />
-
-        <ui:fragment rendered="#{menu.isUserLoggedInMenu}">
-            <ui:include src="/template/common/invlayoutmenu.xhtml" />
-        </ui:fragment>
+        <ui:include src="/template/common/ltamtopbar.xhtml" />
 
         <div id="layout-portlets-cover">
             <ui:insert name="content">
@@ -38,10 +32,11 @@
             </ui:insert>
 
             <div class="layout-portlets-box TexAlCenter">
-                <span class="Fs14 gray FontRalewayRegular">Invessence  |   All rights reserved.</span>
+                <span class="Fs14 gray FontRalewayRegular">iAdvice  |   All rights reserved.</span>
             </div>
         </div>
 
+<!--
         <p:ajaxStatus style="width:128px;height:128px;position:fixed;right:5px;bottom:5px">
             <f:facet name="start">
                 <p:graphicImage name="images/preloader.gif" library="spark_layout"/>
@@ -51,6 +46,7 @@
                 <h:outputText value="" />
             </f:facet>
         </p:ajaxStatus>
+-->
 
         <h:outputStylesheet name="css/core-layout.css" library="spark-layout" />
         <h:outputStylesheet name="css/font-awesome.css" library="spark-layout" />
